# livekit-avatar-benchmark

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  LICENSE  README.md  TODO  check_agent_connection.py  debug_chat_trigger.py  docker-compose.prod.yml  docker-compose.yml  generate_token.py  main.py  pyproject.toml  requirements.txt  ruff.toml  run_simple_listener.py  start.sh
.github/workflows/: ci.yml
agent/: agent.py  anam_agent.py  autotest_agent.py  benchmark_hooks.py  bey_agent.py  bithuman_agent.py  liveavatar_agent.py  main.py  simli_agent.py  tavus_agent.py
agent/plugins/: tavus_agent.py
benchmark/: driver.py  generate_samples.py  run_scenarios.py  scenarios.json  scenarios_short.json  system_benchmark.py
docs/: benchmarking.md  first_test.md
scripts/: check_agent_connection.py  check_and_test.sh  generate_token.py  run_simple_listener.py  start.sh  stop_agents.sh
tests/: test_agent_integration.py  test_conversation.py
